--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+@font-face {
+  font-family: "Epilogue Regular";
+  src: url(./component/asserts/font/epilogue-2-cufonfonts/Epilogue-Regular.ttf);
+}
+@font-face {
+  font-family: "Epilogue SemiBold";
+  src: url(./component/asserts/font/epilogue-2-cufonfonts/Epilogue-SemiBold.ttf);
+}
+
 * {
   padding: 0;
   margin: 0;
-  font-family: "Lexend", sans-serif;
+}
+
+h1 {
+  font-family: "Epilogue SemiBold";
 }
 
 body {
-  background-color: #faf1e8;
+  background-color: #fbf3e9;
+  font-family: "Epilogue Regular";
 }
-
 .max {
   max-width: 1060px;
 }
@@ -94,6 +106,8 @@ body {
   padding: 0% 0%;
   position: relative;
   flex-direction: column;
+  background-image: url("./component/asserts/Texture.png");
+  background-repeat: no-repeat;
 }
 .leftPostContainer {
   width: 100%;
@@ -190,15 +204,21 @@ body {
   align-items: center;
 }
 .weapons {
+  position: absolute;
+  right: 28%;
+  top: 50%;
+  max-width: 600px;
   width: 100%;
+  transform: translate(50%, -41%);
 }
 .weapons img {
   width: 100%;
 }
 .papsPlate {
   position: absolute;
-  top: -80px;
-  left: 25%;
+  top: 0%;
+  left: 50%;
+  transform: translate(-115%, -50%);
 }
 /* .roadmap section starts here */
 .roadmap {
@@ -210,7 +230,6 @@ body {
   padding-top: 5%;
   font-size: 22px;
   border-top: 2px solid #080808;
-  box-shadow: 0px -27px 40px 0px #080808;
   position: relative;
 }
 .roadmap h1 {
@@ -251,7 +270,7 @@ body {
 .yellow-dot {
   width: 16px;
   height: 16px;
-  background: #FCCE75;
+  background: #fcce75;
   position: absolute;
   z-index: 11;
   left: 50%;
@@ -295,11 +314,12 @@ body {
   text-transform: uppercase;
   color: white;
   border-radius: 18px;
-  background-image: url("./component//asserts/faq-bg.png");
+  background-image: url("./component//asserts/halftone.png");
+  background-size: cover;
   max-width: 1060px;
 }
 .faqs-container {
-  width: 90%;
+  width: 100%;
   margin: auto;
   border-radius: 19px;
   padding: 11px;
@@ -370,13 +390,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("./component//asserts/Bottom.png");
+  background-image: url("./component//asserts/footer-bg.png");
   margin-top: 5%;
   box-sizing: border-box;
+  background-color: #34525e;
   padding: 2% 0%;
   border-radius: 48px 48px 0px 0px;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 0px -9px 23px #7c7c7c;
 }
 .contactLinks {
   display: flex;
@@ -425,7 +447,8 @@ body {
   margin: auto;
   justify-content: center;
   align-items: center;
-  margin-bottom: 63px;
+  margin-bottom: 30px;
+  margin-top: -20px;
 }
 
 .solana-logo p {
@@ -509,7 +532,7 @@ body {
   }
 
   .leftPostContainer {
-    width: 95%;
+    width: 100%;
     margin: auto;
     text-align: center;
     margin-top: -1px;
@@ -526,7 +549,9 @@ body {
     font-size: 30px;
     margin: 4% 0%;
   }
-
+  .weapons {
+    display: none;
+  }
   .innerPost p {
     font-size: 16px;
     margin: 4% 0%;
@@ -836,7 +861,7 @@ body {
   /* FAQS section starts here */
   .faqs {
     background-color: #faf1e8;
-    width: 100%;
+    width: 90%;
     background-image: unset !important;
     padding-top: 49px;
   }
@@ -904,4 +929,21 @@ body {
   .faq .faq-arrow {
     right: 0;
   }
+}
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
 }
